--- a/portfolio.html
+++ b/portfolio.html
@@ -29,9 +29,9 @@
 
             <a href="#1">
                 <div class="projectLink">
-                    <img src="http://lorempixel.com/250/170/fashion" class="projectImage">
+                    <img src="assets/images/SuperSmashBabiesImage.png" class="projectImage">
                     <div class="projectTitle">
-                        Hangman
+                        Super Smash Babies
                     </div>
                 </div>
             </a>
