added latest trivia game link

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,21 +27,22 @@
         <div class="projectsContainer">
 
 
-            <a href="#1">
+            
+
+            <a href="https://tpgaviria.github.io/TriviaGame/">
                 <div class="projectLink">
-                    <img src="assets/images/SuperSmashBabiesImage.png" class="projectImage">
+                    <img src="assets/images/TriviaGameImage.png" class="projectImage">
                     <div class="projectTitle">
-                        Super Smash Babies
+                        Trivia Game
                     </div>
                 </div>
             </a>
 
-
-            <a href="#2">
+            <a href="https://tpgaviria.github.io/SuperSmashBabies/">
                 <div class="projectLink">
-                    <img src="http://lorempixel.com/250/170/technics" class="projectImage">
+                    <img src="assets/images/SuperSmashBabiesImage.png" class="projectImage">
                     <div class="projectTitle">
-                        RPG Game
+                        Super Smash Babies
                     </div>
                 </div>
             </a>
