add giphy API portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,11 +47,11 @@
             </a>
 
 
-            <a href="#3">
+            <a href="https://tpgaviria.github.io/GiphyAPI/">
                 <div class="projectLink">
-                    <img src="http://lorempixel.com/250/170/city" class="projectImage">
+                    <img src="assets/images/GiphyAPI.png" class="projectImage">
                     <div class="projectTitle">
-                        Trivia Game
+                        Giphy API
                     </div>
                 </div>
             </a>
