add squadron link

--- a/portfolio.html
+++ b/portfolio.html
@@ -56,11 +56,11 @@
                 </div>
             </a>
 
-            <a href="#4">
+            <a href="https://tpgaviria.github.io/MeetUpApp">
                 <div class="projectLink">
-                    <img src="http://lorempixel.com/250/170/abstract" class="projectImage">
+                    <img src="assets/images/Squadron.png" class="projectImage">
                     <div class="projectTitle">
-                        Rutgers Info Widget
+                        Squadron - Meet up App
                     </div>
                 </div>
             </a>
